# KnowBreak

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/: settings.local.json
app/: README.md  package-lock.json  package.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: image-crop-dialog.tsx  image-review-client.tsx  navigation-header.tsx  production-review-client.tsx  profile-editor.tsx  project-artifact-overview-client.tsx  projects-client.tsx  review-unavailable.tsx  script-review-client.tsx  stage-header.tsx  start-form.tsx  storyboard-review-client.tsx  tasks-client.tsx  tts-settings-panel.tsx  version-actions.tsx  workflow-editor.tsx
app/src/lib/: api-response.ts  clipboard-image.ts  image-generation-prompt.ts  profile-defaults.ts  profile-server.ts  (+7 more)
knowbreak/: __init__.py  cli.py  config.py  llm.py  models.py  pipeline.py  style_profile.py  workflow.py
knowbreak/capabilities/: __init__.py  text_to_image.py
knowbreak/stages/: _common.py  asr.py  assets.py  compose.py  extract.py  images.py  review.py  rewrite.py  script.py  storyboard.py  topic_seed.py  topics.py  tts.py
profiles/: profile.toml
profiles/prompts/: assets.md  script.md  storyboard.md  topics.md
profiles/serious_science/: profile.toml
profiles/workflows/: workflow_e4bb517257.toml  workflow_f380449069.toml
scripts/: gen_v003_local_shots.py  generate_logo.py
tests/: test_asr_subtitles.py  test_images.py  test_storyboard.py  test_style_profile.py  test_text_to_image.py  test_topics.py  test_tts.py  test_versions.py  test_workflow.py
(+64 files in other folders)
